--- a/nicepage.css
+++ b/nicepage.css
@@ -37959,6 +37959,21 @@ a.u-link.u-text-hover-grey-90:hover {
   min-height: 243px;
 }
 
+.u-header .u-menu-1 {
+  margin: 48px 0 0 auto;
+}
+
+.u-header .u-nav-1 {
+  font-size: 1rem;
+  letter-spacing: 0px;
+  font-weight: 500;
+}
+
+.u-header .u-nav-2 {
+  font-size: 1.25rem;
+  margin: 20px auto 0;
+}
+
 .u-header .u-icon-1 {
   width: 144px;
   height: 148px;
@@ -37967,7 +37982,7 @@ a.u-link.u-text-hover-grey-90:hover {
   --animation-custom_in-opacity: 0;
   --animation-custom_in-rotate: 0deg;
   --animation-custom_in-scale: 1;
-  margin: 48px auto 0 84px;
+  margin: -36px auto 0 84px;
   padding: 0;
 }
 
@@ -37975,7 +37990,7 @@ a.u-link.u-text-hover-grey-90:hover {
   background-image: none;
   border-style: none;
   font-size: 1.5rem;
-  margin: -157px auto 0 431px;
+  margin: -94px auto 0 304px;
   padding: 0;
 }
 
@@ -37983,112 +37998,111 @@ a.u-link.u-text-hover-grey-90:hover {
   font-size: 3rem;
   background-image: none;
   font-weight: 700;
-  margin: 41px 283px 0 304px;
-}
-
-.u-header .u-menu-1 {
-  margin: -100px 0 0 auto;
-}
-
-.u-header .u-nav-1 {
-  font-size: 1rem;
-  letter-spacing: normal;
-}
-
-.u-header .u-nav-2 {
-  font-size: 1.25rem;
-  margin: 20px auto 0;
+  margin: -4px 277px 0 310px;
 }
 
 .u-header .u-btn-2 {
   background-image: none;
   border-style: none;
   font-size: 1.5rem;
-  margin: -68px auto 60px 437px;
+  margin: -117px 334px 60px auto;
   padding: 0;
 }
 @media (max-width: 1199px) {
+  .u-header .u-menu-1 {
+    width: auto;
+    margin-top: 41px;
+  }
+
   .u-header .u-icon-1 {
     width: 144px;
     height: 147px;
+    margin-top: -29px;
     margin-left: 84px;
   }
 
   .u-header .u-btn-1 {
-    margin-top: -140px;
-    margin-left: 336px;
+    margin-top: -92px;
+    margin-left: 277px;
   }
 
   .u-header .u-text-1 {
     width: auto;
-    margin-top: 31px;
-    margin-right: 139px;
-    margin-left: 248px;
-  }
-
-  .u-header .u-menu-1 {
-    margin-top: -105px;
+    margin-top: -1px;
+    margin-right: 110px;
+    margin-left: 277px;
   }
 
   .u-header .u-btn-2 {
-    margin-top: -47px;
-    margin-left: 336px;
+    margin-right: 144px;
   }
 }
 @media (max-width: 991px) {
+  .u-header .u-menu-1 {
+    margin-top: 78px;
+  }
+
+  .u-header .u-icon-1 {
+    margin-top: -65px;
+    margin-left: 14px;
+  }
+
   .u-header .u-btn-1 {
-    margin-top: -124px;
-    margin-right: 202px;
-    margin-left: auto;
+    margin-top: -77px;
+    margin-left: 189px;
   }
 
   .u-header .u-text-1 {
     font-size: 2.25rem;
-    margin-top: 32px;
-    margin-right: -71px;
-    margin-left: 238px;
-  }
-
-  .u-header .u-menu-1 {
-    margin-top: -122px;
+    margin-top: 0;
+    margin-right: 20px;
+    margin-left: 217px;
   }
 
   .u-header .u-btn-2 {
-    margin-top: -18px;
-    margin-right: 202px;
-    margin-left: auto;
+    margin-top: -98px;
+    margin-right: 46px;
   }
 }
 @media (max-width: 767px) {
+  .u-header .u-menu-1 {
+    margin-top: 76px;
+  }
+
   .u-header .u-icon-1 {
-    margin-top: 28px;
+    margin-top: -83px;
     margin-left: 0;
   }
 
   .u-header .u-btn-1 {
     margin-top: -99px;
     margin-right: 113px;
+    margin-left: 9px;
   }
 
   .u-header .u-text-1 {
     font-size: 2.125rem;
-    margin-top: 49px;
-    margin-right: -136px;
-    margin-left: 136px;
-  }
-
-  .u-header .u-menu-1 {
-    margin-top: -143px;
+    margin-top: 73px;
+    margin-right: -50px;
+    margin-left: 50px;
   }
 
   .u-header .u-btn-2 {
-    margin-top: -3px;
+    margin-top: -135px;
     margin-right: 113px;
   }
 }
 @media (max-width: 575px) {
+  .u-header .u-sheet-1 {
+    min-height: 259px;
+  }
+
+  .u-header .u-menu-1 {
+    margin-top: 79px;
+  }
+
   .u-header .u-icon-1 {
-    margin-top: 15px;
+    margin-top: -99px;
   }
 
   .u-header .u-btn-1 {
@@ -38105,15 +38119,11 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-left: 17px;
   }
 
-  .u-header .u-menu-1 {
-    margin-top: -244px;
-  }
-
   .u-header .u-btn-2 {
     font-size: 1rem;
-    margin-top: 118px;
+    margin-top: -75px;
     margin-right: 0;
-    margin-bottom: 40px;
+    margin-bottom: 56px;
   }
 }
  .u-footer {
