--- a/nicepage.css
+++ b/nicepage.css
@@ -37990,7 +37990,15 @@ a.u-link.u-text-hover-grey-90:hover {
   background-image: none;
   border-style: none;
   font-size: 1.5rem;
-  margin: -94px auto 0 304px;
+  margin: -73px 326px 0 auto;
+  padding: 0;
+}
+
+.u-header .u-btn-2 {
+  background-image: none;
+  border-style: none;
+  font-size: 1.5rem;
+  margin: -41px auto 0 312px;
   padding: 0;
 }
 
@@ -37998,132 +38006,91 @@ a.u-link.u-text-hover-grey-90:hover {
   font-size: 3rem;
   background-image: none;
   font-weight: 700;
-  margin: -4px 277px 0 310px;
-}
-
-.u-header .u-btn-2 {
-  background-image: none;
-  border-style: none;
-  font-size: 1.5rem;
-  margin: -117px 334px 60px auto;
-  padding: 0;
+  margin: -10px 275px 15px 312px;
 }
 @media (max-width: 1199px) {
-  .u-header .u-menu-1 {
-    width: auto;
-    margin-top: 41px;
-  }
-
   .u-header .u-icon-1 {
     width: 144px;
     height: 147px;
-    margin-top: -29px;
-    margin-left: 84px;
+    margin-top: -35px;
+    margin-left: 18px;
   }
 
   .u-header .u-btn-1 {
-    margin-top: -92px;
-    margin-left: 277px;
+    margin-top: -97px;
+    margin-right: 126px;
+  }
+
+  .u-header .u-btn-2 {
+    margin-left: 291px;
   }
 
   .u-header .u-text-1 {
     width: auto;
-    margin-top: -1px;
-    margin-right: 110px;
-    margin-left: 277px;
-  }
-
-  .u-header .u-btn-2 {
-    margin-right: 144px;
+    margin: 14px 84px 11px 303px;
   }
 }
 @media (max-width: 991px) {
-  .u-header .u-menu-1 {
-    margin-top: 78px;
-  }
-
   .u-header .u-icon-1 {
-    margin-top: -65px;
-    margin-left: 14px;
-  }
-
-  .u-header .u-btn-1 {
-    margin-top: -77px;
-    margin-left: 189px;
-  }
-
-  .u-header .u-text-1 {
-    font-size: 2.25rem;
-    margin-top: 0;
-    margin-right: 20px;
-    margin-left: 217px;
-  }
-
-  .u-header .u-btn-2 {
-    margin-top: -98px;
-    margin-right: 46px;
-  }
-}
-@media (max-width: 767px) {
-  .u-header .u-menu-1 {
-    margin-top: 76px;
-  }
-
-  .u-header .u-icon-1 {
-    margin-top: -83px;
+    margin-top: -34px;
     margin-left: 0;
   }
 
   .u-header .u-btn-1 {
-    margin-top: -99px;
-    margin-right: 113px;
-    margin-left: 9px;
+    margin-top: -122px;
+    margin-right: 65px;
+  }
+
+  .u-header .u-btn-2 {
+    margin-left: 175px;
+  }
+
+  .u-header .u-text-1 {
+    font-size: 2.25rem;
+    margin: 25px 0 47px 167px;
+  }
+}
+@media (max-width: 767px) {
+  .u-header .u-icon-1 {
+    margin-top: -92px;
+    margin-left: 43px;
+  }
+
+  .u-header .u-btn-1 {
+    margin-top: 0;
+    margin-right: 24px;
+  }
+
+  .u-header .u-btn-2 {
+    margin-left: 20px;
   }
 
   .u-header .u-text-1 {
     font-size: 2.125rem;
-    margin-top: 73px;
-    margin-right: -50px;
-    margin-left: 50px;
-  }
-
-  .u-header .u-btn-2 {
-    margin-top: -135px;
-    margin-right: 113px;
+    margin: -17px -85px 27px 85px;
   }
 }
 @media (max-width: 575px) {
-  .u-header .u-sheet-1 {
-    min-height: 259px;
-  }
-
-  .u-header .u-menu-1 {
-    margin-top: 79px;
-  }
-
   .u-header .u-icon-1 {
-    margin-top: -99px;
+    margin-top: -96px;
+    margin-left: 12px;
   }
 
   .u-header .u-btn-1 {
     font-size: 1rem;
-    margin-top: 15px;
-    margin-right: auto;
+    margin-top: 12px;
+    margin-right: 0;
+  }
+
+  .u-header .u-btn-2 {
+    font-size: 1rem;
+    margin-top: -26px;
     margin-left: 0;
   }
 
   .u-header .u-text-1 {
     font-size: 1.8125rem;
-    margin-top: 3px;
-    margin-right: 0;
-    margin-left: 17px;
-  }
-
-  .u-header .u-btn-2 {
-    font-size: 1rem;
-    margin-top: -75px;
-    margin-right: 0;
-    margin-bottom: 56px;
+    margin: -8px -12px 33px 12px;
   }
 }
  .u-footer {
